# python-template

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  objects.inv  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml  pipeline.yml
docs/: gen_ref_pages.py  mkdocs.yml
docs/docs/: docker.md  index.md  module.md
docs/docs/probability/: funtions.md  measure theory.md
docs/docs/project/: contribution.md
docs/docs/reference/: __init__.md  example.md  settings.md
docs/docs/reference/module/: __init__.md  example.md
generic/: index.html
my_package/: _version  example.py  settings.py
my_package/module/: example.py
probability/funtions/: index.html
probability/measure theory/: index.html
project/contribution/: index.html
reference/SUMMARY/: index.html
reference/module/this/: index.html
requirements/: dev  doc  lint  prod  test
search/: search_index.json
tests/: test_example.py
