[tool.setuptools_scm]
write_to = "my_package/_version"
write_to_template = """\"\"\"Package version (handled by setuptools_scm)\"\"\"
__version__ = "{version}"
"""

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

# pytest options
[tool.pytest.ini_options]
addopts = '''
--cov=creditscoring
--cov-report=term-missing
'''
testpaths = "tests"

# coverge reporting options
[tool.coverge.report]
exclude_line = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING",
    "if typing.TYPE_CHECKING",
    "if t.TYPE_CHECKING",
    "@overload",
    "@typing.overload",
    "@t.overload",
    "pragma: no cover",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
]

[tool.black]
line-length=100
color = true
exclude = '''
/(
    \.git
    | \.hg
    | notebooks
    | \.mypy_cache
    | \.tox
    | \.nox
    | \.venv
    | _build
    | \.eggs
    | buck-out
    | build
    | dist
    | env
    | venv
    | \.svn
)/
'''

[tool.isort]
# to match black style
line_length = 100

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
profile = "black"
force_grid_wrap = 0
use_parentheses = true
indent = 4
ensure_newline_before_comments = true
color_output = true

# google style guide for imports
force_single_line = true
force_sort_within_sections = true
lexicographical = true
order_by_type = true
single_line_exclusions = [
    "typing",
]

known_first_party = [
    "creditscoring",
    "tests",
]

[tool.mypy]
exclude = [
    "venv/"
]
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true